Revealing a "0" Tile will cause all adjacent 0 tiles to open

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+    </dependencies>
     
 </project>
