Score Serializer created

--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,13 @@
     </build>
 
     <dependencies>
+
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>1.7.1</version>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.8</version>
         </dependency>
+
     </dependencies>
-    
+
 </project>
